@@ -26,3 +26,4 @@ sfx_icon.shp
 notebook.shp
 stats_extra.shp
 mtgm.mid
+newvideooptions.shp
